# libmgpp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clang-dev-tools.cmake
include/: mgpp.hpp
include/mgpp/: ao.hpp  noncopyable.hpp  signals.hpp
include/mgpp/ao/: event.hpp  hsm.hpp
include/mgpp/signals/: dispatcher.hpp  event.hpp
src/mgpp/ao/: hsm.cpp
src/mgpp/signals/: dispatcher.cpp
test/: CMakeLists.txt
test/ao/: CMakeLists.txt  test_hsm.cpp
test/signals/: CMakeLists.txt  test_signals.cpp
